prometheus/grafana-expose.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: prometheus
  labels:
    app.kubernetes.io/name: grafana
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30000
  selector:
    app.kubernetes.io/name: grafana
