prometheus/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus
spec:
  defaultBackend:
    service:
      name: grafana
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana
