prometheus/prometheus_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
spec:
  defaultBackend:
    service:
      name: prometheus-server
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - prometheus
